<resources>
    <string name="app_name">autoMarket</string>
    <string name="logo_description">logo of the application</string>
    <string name="button_buy">BUY</string>
    <string name="button_sell">SELL</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Password</string>
    <string name="edit_email_autofill">Enter your email</string>
    <string name="edit_password_autofill">Enter your password</string>
    <string name="edit_username">Username</string>
    <string name="item_logout">Logout</string>
    <string name="message_welcome">Hello\ </string>
    <string name="button_your_ads">Your ADS</string>
    <string name="button_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_make">Marca</string>
    <string name="add_model">Model</string>
    <string name="add_fuel">Combustibil</string>
    <string name="add_displacement">Capacitate motor</string>
    <string name="add_power">Putere motor</string>
    <string name="add_mileage">Km</string>
    <string name="add_year">An</string>
    <string name="add_post">Post</string>
    <string name="add_image">image</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_add">Add</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_account">Account</string>
    <string name="edit_phone">Phone</string>
    <string name="button_have_account">Have account? Login</string>
    <string name="login_have_account">Don\'t have account? Register</string>
    <string name="profile_info">Profile info</string>
    <string name="profile_email">Email:\ </string>
    <string name="profile_phone">Phone:\ </string>
</resources>