<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/logo_automarket" />

        <EditText
            android:id="@+id/edit_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/edit_username"
            android:inputType="textPersonName"
            android:autofillHints="Enter username" />

        <EditText
            android:id="@+id/edit_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/edit_email_autofill"
            android:ems="10"
            android:hint="@string/edit_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:autofillHints="@string/edit_password_autofill" />

        <Button
            android:id="@+id/button_register_register"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/button_register"
            app:backgroundTint="@color/primary_color" />

        <Button
            android:id="@+id/button_login_register"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:onClick="backToLoginActivity"
            android:text="@string/button_login"
            app:backgroundTint="@color/primary_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>