<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/logo_automarket" />

        <Button
            android:id="@+id/button_buy"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="130dp"
            android:text="@string/button_buy"
            android:onClick="launchFeed"
            app:backgroundTint="@color/primary_color" />

        <Button
            android:id="@+id/button_sell"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:onClick="launchLoginActivity"
            android:text="@string/button_sell"
            app:backgroundTint="@color/primary_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>